Added cameras. Refactored ui and services